Fix codeclimate issues, remove letter-spacing attribute

--- a/app/javascript/dashboard/assets/scss/_layout.scss
+++ b/app/javascript/dashboard/assets/scss/_layout.scss
@@ -6,7 +6,6 @@ body {
   margin: 0;
     -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  letter-spacing: -0.5px;
 }
 
 .app-wrapper {
