--- a/app/javascript/widget/assets/scss/woot.scss
+++ b/app/javascript/widget/assets/scss/woot.scss
@@ -10,7 +10,6 @@ body {
   font-family: $font-family;
   font-size: 10px;
   height: 100%;
-  letter-spacing: 0px;
 }
 
 .woot-widget-wrap {
